--- a/app/views/pages/pricing.html.haml
+++ b/app/views/pages/pricing.html.haml
@@ -69,7 +69,7 @@
                   %li Unlimited Candidates  
                   %li Premium Phone and Email Support
                 .price_footer
-                  = link_to "Start Free Trial", new_group_path(p: Group::SIX_TO_FIFTEEN_PLAN), class: "action_button" 
+                  = link_to "Start Free Trial", new_group_path(p: Group::SIX_TO_FIFTEEN_PLAN), class: "action_button", descriptor: "six_to_fifteen" 
             %div.sales_help_inline{ style: "margin-top: -30px; "} 
               %p{ style: "margin: -30px 0 12px; float: right;"} 
                 Have more than 15 admins?  
