--- a/app/views/group_mailer/welcome.html.haml
+++ b/app/views/group_mailer/welcome.html.haml
@@ -1,18 +1,38 @@
-%p{ style: "font-size:12px;"} Hi #{@user.name.split.first},
-%p{ style: "font-size:12px;"} 
-  Thanks for signing up for MetaBright! 
-  Your plan allows you to have #{@group.users.count} #{@u} on your account. 
-  If you'd like to add more users, just go to #{link_to "your account management tab", account_group_url(@group)}. 
-%p{ style: "font-size: 12px;"} 
-  Here are a few of the features included with your MetaBright subscription:
-  %ul{ style: "font-size: 12px;"} 
-    %li{ style: "font-size: 12px;"}  <strong>Evaluations:</strong> Validate the skills of your job candidates before you spend time interviewing them. You can include up to 5 Challenges in each Evaluation. Each Challenge measures your candidate in a specific skill. #{link_to "Create an Evaluation.", new_group_evaluation_path(@group)}
-    %li{ style: "font-size: 12px;"}  <strong>Custom Challenges:</strong> If your company requires a specific skill set that MetaBright doesn't offer yet, you can create your own custom Challenge. The best part is MetaBright's organizational and algorithmic capabilities will still be applied to your Challenge! #{link_to "Create a custom Challenge.", new_group_path_url(@group)}
-    %li{ style: "font-size: 12px;"}  <strong>The MetaScore:</strong> We distill everything about your candidate down to a single, easy to understand figure: the MetaScore. This way you can easily compare all your candidates at a glance. The MetaScore is instantly available on all MetaBright Challenges, and even on your custom Challenges once you have over 20 participants.
-%p{ style: "font-size: 12px;"}
-  If you ever have any questions about MetaBright or your plan, you can reach our support team at #{link_to "support@metabright.com", "mailto:support@metabright.com"}.
-%p{ style: "font-size:12px;"} 
-  Thanks,
-  %br
-  Team MetaBright
+- if @group.is_trial?
+  %p{ style: "font-size:12px;"} Hi #{@user.name.split.first},
+  %p{ style: "font-size:12px;"} 
+    Thanks for signing up for a MetaBright trial account! 
+    We're excited to hear about your experience using MetaBright and how it's benefited your organization.
+  %p{ style: "font-size: 12px;"} 
+    Once you've had time to take MetaBright for a spin, you should consider upgrading to a full account:
+    %ul{ style: "font-size: 12px;"} 
+      %li{ style: "font-size: 12px;"}  <strong>Unlimited Evaluations:</strong> Validate the skills of your job candidates before you spend time interviewing them. <em>Your account is currently limited to three active Evaluations.</em> #{link_to "Create an Evaluation now.", new_group_evaluation_path(@group)}
+      %li{ style: "font-size: 12px;"}  <strong>Additional Administrators:</strong> Add more administrators to your account so everyone in your organization can access candidate information, test results, and reports. <em>Your account only allows for one administrator.</em>
+      %li{ style: "font-size: 12px;"}  <strong>Premium Support:</strong> Direct and expedited support is available in MetaBright's premium plans. <em>Your account currently has limited email support.</em>
+      %li{ style: "font-size: 12px;"}  <strong>Full Access to New Features:</strong> Make sure you have access to all the new MetaBright analytical and talent search features. <em>Your account has limited access to new features.</em>
+  %p{ style: "font-size: 12px;"}
+    If you ever have any questions about MetaBright or your plan, feel free to reach out to us at #{link_to "support@metabright.com", "mailto:support@metabright.com"}.
+  %p{ style: "font-size:12px;"} 
+    Thanks,
+    %br
+    Team MetaBright
+  
+- else
+  %p{ style: "font-size:12px;"} Hi #{@user.name.split.first},
+  %p{ style: "font-size:12px;"} 
+    Thanks for signing up for MetaBright! 
+    Your plan allows you to have #{@group.users.count} #{@u} on your account. 
+    If you'd like to add more users, just go to #{link_to "your account management tab", account_group_url(@group)}. 
+  %p{ style: "font-size: 12px;"} 
+    Here are a few of the features included with your MetaBright subscription:
+    %ul{ style: "font-size: 12px;"} 
+      %li{ style: "font-size: 12px;"}  <strong>Evaluations:</strong> Validate the skills of your job candidates before you spend time interviewing them. You can include up to 5 Challenges in each Evaluation. Each Challenge measures your candidate in a specific skill. #{link_to "Create an Evaluation.", new_group_evaluation_path(@group)}
+      %li{ style: "font-size: 12px;"}  <strong>Custom Challenges:</strong> If your company requires a specific skill set that MetaBright doesn't offer yet, you can create your own custom Challenge. The best part is MetaBright's organizational and algorithmic capabilities will still be applied to your Challenge! #{link_to "Create a custom Challenge.", new_group_path_url(@group)}
+      %li{ style: "font-size: 12px;"}  <strong>The MetaScore:</strong> We distill everything about your candidate down to a single, easy to understand figure: the MetaScore. This way you can easily compare all your candidates at a glance. The MetaScore is instantly available on all MetaBright Challenges, and even on your custom Challenges once you have over 20 participants.
+  %p{ style: "font-size: 12px;"}
+    If you ever have any questions about MetaBright or your plan, you can reach our support team at #{link_to "support@metabright.com", "mailto:support@metabright.com"}.
+  %p{ style: "font-size:12px;"} 
+    Thanks,
+    %br
+    Team MetaBright
   
