group welcome email wrapped up

--- a/app/views/group_mailer/welcome.html.haml
+++ b/app/views/group_mailer/welcome.html.haml
@@ -2,7 +2,7 @@
   %p{ style: "font-size:12px;"} Hi #{@user.name.split.first},
   %p{ style: "font-size:12px;"} 
     Thanks for signing up for a MetaBright trial account! 
-    We're excited to hear about your experience using MetaBright and how it's benefited your organization.
+    We're excited to hear about your experience using MetaBright and how it benefits your organization.
   %p{ style: "font-size: 12px;"} 
     Once you've had time to take MetaBright for a spin, you should consider upgrading to a full account:
     %ul{ style: "font-size: 12px;"} 
@@ -22,7 +22,7 @@
   %p{ style: "font-size:12px;"} 
     Thanks for signing up for MetaBright! 
     Your plan allows you to have #{@group.users.count} #{@u} on your account. 
-    If you'd like to add more users, just go to #{link_to "your account management tab", account_group_url(@group)}. 
+    If you'd like to add more admins, just go to #{link_to "your account management tab", account_group_url(@group)}. 
   %p{ style: "font-size: 12px;"} 
     Here are a few of the features included with your MetaBright subscription:
     %ul{ style: "font-size: 12px;"} 
