--- a/app/views/pages/pricing.html.haml
+++ b/app/views/pages/pricing.html.haml
@@ -17,7 +17,7 @@
           %div   
             %ul.pricing_table 
               %li.price_block 
-                %h3 1 Free Admin 
+                %h3 1 Trial Admin 
                 .price 
                   .price_figure 
                     %span.price_number FREE
