--- a/app/views/groups/signup/form.html.haml
+++ b/app/views/groups/signup/form.html.haml
@@ -48,19 +48,24 @@
       %div{ style: "display: inline-block; vertical-align: top; margin-top: 31px;"}
         %h1 MetaBright Evaluator
     .body{ style: "padding:16px 16px 0;" }
-      .reassurance
-        %h2 Start Your Free 14-Day Trial
-        %h3 Begin Testing Your Candidates in Less Than 60 Seconds.
-      .reaffirm
-        .image
-          = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/free_14_day.png"
-        .text
-          %h4 100% no-risk, free trial
-          %p
-            1) Setup your account. Get access to all features.<br>
-            2) NOTHING will be billed to your card for 14 days. Guaranteed.<br>
-            3) If you want to continue after 14 days, only then will we begin billing you.<br>
-            4) During your free trial you can cancel at any time. No questions asked. Nothing billed at all.
+      - if @is_trial
+        .reassurance{ style: "margin-bottom: 45px;"}
+          %h2 Upgrade Your MetaBright Account
+          %h3 Take Advantage of Everything MetaBright Has to Offer.
+      - else
+        .reassurance
+          %h2 Start Your Free 14-Day Trial
+          %h3 Begin Testing Your Candidates in Less Than 60 Seconds.
+        .reaffirm
+          .image
+            = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/free_14_day.png"
+          .text
+            %h4 100% no-risk, free trial
+            %p
+              1) Setup your account. Get access to all features.<br>
+              2) NOTHING will be billed to your card for 14 days. Guaranteed.<br>
+              3) If you want to continue after 14 days, only then will we begin billing you.<br>
+              4) During your free trial you can cancel at any time. No questions asked. Nothing billed at all.
       %p{ style: "position: relative; left: 78px; bottom: 23px; float: left; "}
         = link_to "https://stripe.com/help/security", target: "_blank" do
           = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/stripe_solid_clipped.png"
@@ -70,8 +75,11 @@
         = f.hidden_field :stripe_token
         = f.hidden_field :plan_type
         .product_name
-          Evaluator #{plan[:description]}: $0 for 14 Days
-          %div{ style: "font-size: 12px; "} After 14 Days: #{plan[:price]} per month
+          - if @is_trial
+            Evaluator #{plan[:description]}: #{plan[:price]}/mo.
+          - else
+            Evaluator #{plan[:description]}: $0 for 14 Days
+            %div{ style: "font-size: 12px; "} After 14 Days: #{plan[:price]} per month
         .coupon_desc.valid-coupon{ style: "display: none; margin-top: 8px;" }
           %div{ style: "font-size: 16px;"} COUPON APPLIED!
           First month free!
@@ -83,8 +91,12 @@
         - else
           %label{ style: "margin-top: 16px; "} Your name:
           = f.text_field :creator_name, placeholder: "Your name...", "data-label" => "your name"
-        %label Company name:
-        = f.text_field :name, placeholder: "Company name...", "data-label" => "your company's name"
+        - if @is_trial
+          %label Company name:
+          %input{ type: "text", disabled: "disabled", value: @admin_group.name }
+        - else
+          %label Company name:
+          = f.text_field :name, placeholder: "Company name...", "data-label" => "your company's name"
         
         - if current_user
           = f.hidden_field :creator_email
@@ -118,29 +130,36 @@
         = link_to "Apply", "", id: "coupon_check", style: "float: inherit; position: relative; bottom: 6px; left: 10px; font-size: 14px;"
         %p.errors= @errors
         .control-group
-          %p.in-progress.hide Creating your account now. This may take a minute or two...
+          - if @is_trial
+            %p.in-progress.hide Upgrading your account now. This may take a minute or two...
+          - else 
+            %p.in-progress.hide Creating your account now. This may take a minute or two...
           = link_to pricing_url do
             = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/back.png", class: "gear", title: "back"
-          = f.submit "Start My Free Trial", class: "submit_button", style: "width: inherit;"
+          - if @is_trial
+            = f.submit "Upgrade My Account", class: "submit_button", style: "width: inherit;"
+          - else
+            = f.submit "Start My Free Trial", class: "submit_button", style: "width: inherit;"
       %h3{ style: "margin-top: 20px;"} Common Questions
-      #faq_accordion.accordion           
-        .accordion-group 
-          .accordion-heading 
-            %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseOne"} 
-              Why do you need my credit card for a free trial? 
-          #collapseOne.accordion-body.collapse.in
-            .accordion-inner 
-              We ask for your credit card to allow your membership to continue after your free trial, should you choose not to cancel. 
-              This helps us reduce fraud and prevent multiple free trials for the same person. 
-              Because of this, we're able to deliver better service for all the honest customers. 
-              %br
-              %br
-              Remember that we won't bill you anything during your free trial and that you can cancel at any moment before your trial ends.
-        .accordion-group 
+      #faq_accordion.accordion 
+        - unless @is_trial
+          .accordion-group 
+            .accordion-heading 
+              %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseOne"} 
+                Why do you need my credit card for a free trial? 
+            #collapseOne.accordion-body.collapse.in
+              .accordion-inner 
+                We ask for your credit card to allow your membership to continue after your free trial, should you choose not to cancel. 
+                This helps us reduce fraud and prevent multiple free trials for the same person. 
+                Because of this, we're able to deliver better service for all the honest customers. 
+                %br
+                %br
+                Remember that we won't bill you anything during your free trial and that you can cancel at any moment before your trial ends.
+        .accordion-group
           .accordion-heading 
             %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseTwo"} 
               Do I have to sign up for a contract or pre-pay for my Evaluator subscription? 
-          #collapseTwo.accordion-body.collapse 
+          #collapseTwo.accordion-body.collapse
             .accordion-inner 
               Nope! Evaluator subscriptions are month-to-month. There are no contracts or obligations to continue your membership any longer than you want. You'll be billed monthly and can cancel anytime.
         .accordion-group 
@@ -156,7 +175,7 @@
               How do I add additional admins to my account?
           #collapseFour.accordion-body.collapse 
             .accordion-inner 
-              It's simple to invite additional admins to your account. After signing up, click "Account" in the nav bar. 
+              It's simple to invite additional administrators to your account. After signing up, click "Account" in the nav bar. 
               There is a field to input the email addresses of the people you want to invite.
               Your invitees will automatically have administrator privileges.
       
