--- a/app/views/groups/_account_table.html.haml
+++ b/app/views/groups/_account_table.html.haml
@@ -53,14 +53,13 @@
     %tr
       %td{ colspan: "3", style: "border-bottom: 0;" }
         - if @group.can_add_users?
-          %a{ onclick: "$(this).hide();$('#invite_form').show();" } + Invite more users to this account.
+          %a{ style: "color: #0088cc;", onclick: "$(this).hide();$('#invite_form').show();" } + Invite more users to this account.
           = form_tag(invite_group_url(@group), id: "invite_form", class: "hide") do
             = text_field_tag :email, nil, placeholder: "Enter email address...", class: "invite"
             = submit_tag "Invite", class: "button button-standard button-mini"
-        - elsif @group.can_add_users? and not @group.is_trial?
-          %a{ onclick: "$(this).hide();$('#upgrade_group').show();" } Upgrade your account to invite more users.
-          = form_for(@group, html: { class: "hide", id: "upgrade_group" }) do |f|
-            = hidden_field_tag :redirect_url, account_group_url(@group)
+        - else
+          %a{ style: "color: #0088cc;", onclick: "$(this).hide();$('#upgrade_group').show();" } Upgrade your account to invite more users.
+          = form_for(@group, url: new_group_url, html: { class: "hide", id: "upgrade_group", method: "put" }) do |f|
             .control-group
               %label.control-label Choose a plan you'd like to upgrade to:
               .controls
