--- a/app/views/groups/signup/confirmation.html.haml
+++ b/app/views/groups/signup/confirmation.html.haml
@@ -10,7 +10,10 @@
     .aboutheader
       %img{ src: STONEY_SMALL_URL, alt: "Stoney"}
       .text{ style: ""}
-        %h1{ style: "margin-top:0;" } Welcome to MetaBright!
+        - if @was_trial
+          %h1{ style: "margin-top:0;" } Upgrade Successful!
+        - else
+          %h1{ style: "margin-top:0;" } Welcome to MetaBright!
     %hr{ style: "margin: 0 0 10px;"}
     - if false and @group.can_add_users?
       / .invite_box
