--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -539,10 +539,24 @@ left: -10px; }
 h1, h2, h3, h4, h5, h6, p, div, a { font-family: 'MuliLight', 'Helvetica', 'Arial'; font-weight: lighter; }
 .button.disabled { opacity: 0.70; box-shadow: 0px 0px 1px black; cursor: not-allowed;}
 
-/* Create and Administer/Revolution */
+/* Create and Administer Revolution */
 .single_pane { padding: 15px; background-color: white; border-radius: 4px; min-height: 400px;}
 .pills a { line-height: 23px; cursor: pointer }
 .overview td { text-align: center; border: 1px solid #DDD; width: 80px; }
+
+th {
+  .active { 
+    padding-right: 18px;
+    background-repeat: no-repeat;
+    background-position: right center;
+  }
+  .asc {
+    background-image: url(https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/triangle_up.png);
+  }
+  .desc {
+    background-image: url(https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/triangle_down.png);
+  }
+}
 
 
 /* Footer/Revolution */
