--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -1,7 +1,8 @@
 @import "variables.css.scss";
 
 /* General/Revolution - this should always stay at the top */
-pre.unstyled { padding: 0px; background-color: inherit; border: 0px; word-break:normal;}
+pre.unstyled { padding: 0px; background-color: inherit; border: 0px; }
+pre { word-break: normal; }
 .profile_dropdown li { min-width: 130px; }
 .profile_dropdown li:hover { color: white; }
 .navbar{ z-index:1010; }
