--- a/app/assets/stylesheets/launchpad.css.scss
+++ b/app/assets/stylesheets/launchpad.css.scss
@@ -171,17 +171,23 @@ $success_color: #62c462;
 .signup {
   text-align: center;
   
-  .btn.danger { width:205px; padding-top:7px; padding-bottom:7px; }
-  .btn.danger:first-child { margin-bottom: 12px; }
-  .btn.danger img { height:30px; }
+  .submit_button { 
+    width: 220px;
+    margin: 0 auto; 
+    display: block;
+    float: none;
+    
+    &:first-child { margin-bottom: 12px; }
+    img { height: 30px; }
+  }
   .divider {
     background-image: url($divider);
     background-repeat: no-repeat;
     background-position: center 10px;
-    width: 350px;
+    width: 364px;
     margin: 15px auto;
   }
   form { margin-bottom: 0; }
-  input { padding: 10px 15px; font-size: 16px; width: 180px; text-align: left; }
-  input:nth-child(3) { margin-right:5px; margin-left:5px; }
+  input { padding: 10px 15px; font-size: 16px; width: 157px; text-align: left; }
+  input:nth-child(3) { margin-right:5px; }
 }
