--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -21,6 +21,20 @@ pre { word-break: normal; }
   &:hover{ box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2); text-decoration: none; color: white;}
   &:active{ position: relative; top: 1px; }
 }
+.submit_button_alt {
+  background-color: $employer_green;
+  color: white;
+  float: right;
+  font-weight: normal;
+  box-shadow: none;
+  margin: 0;
+  font-size: 15px;
+  border: none;
+  border-radius: 3px;
+  padding: 7px 20px 5px 20px;
+  &:hover{ box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2); text-decoration: none; color: white;}
+  &:active{ position: relative; top: 1px; }
+}
 .clear_floats { clear: both;}
 /* Offerchat box sizing */
 #offerchatbox{ width: 260px !important;}
