fix join button on consumer

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -79,7 +79,7 @@
             %li.navuser
               .dropdown.pull-right
                 - if current_user.guest_user?
-                  %a.register_link_holder.register_link{ style: "padding: 4px 0; background-color: whiteSmoke; margin: 2px 9px 0 0;"}
+                  = link_to profile_path(current_user.username), class: "register_link_holder", style: "padding: 4px 0; background-color: whiteSmoke; margin: 2px 9px 0 0;" do
                     %span Join
                 - else
                   - groups = @groups if not @admin_group and (@groups and @groups.size > 0)
