--- a/app/views/modals/_login.html.haml
+++ b/app/views/modals/_login.html.haml
@@ -25,8 +25,8 @@
               %span.landingbuttontext Sign in with LinkedIn »
           %div{ style: "margin-bottom: 0;"}
             = link_to "/auth/github", class: "submit_button" do
-              = image_tag ICON_LOGIN_GITHUB, alt: "Github"
-              %span.landingbuttontext Sign in with Github »
+              = image_tag ICON_LOGIN_GITHUB, alt: "GitHub"
+              %span.landingbuttontext Sign in with GitHub »
         %div{style:"padding:12px;"}
           - unless current_user
             %p
