--- a/app/views/tasks/_take_task.html.haml
+++ b/app/views/tasks/_take_task.html.haml
@@ -24,7 +24,7 @@
       %div.error.hide{ style: "font-size: 13px; color: #971D1C;" }
       %div{ style: "text-align:center; "}
         %img{ alt: "Lightbulb", src: LIGHT_BULB_URL, style: "height:15px; display:inline;" }
-        %p{ style: "display:inline; font-size:12px; margin-top: -5px;" } Example: code on Github, pictures on Flickr, blog post or Youtube video 
+        %p{ style: "display:inline; font-size:12px; margin-top: -5px;" } Example: code on GitHub, pictures on Flickr, blog post or Youtube video 
 
     %div#image_input{ style: "text-align:center; display: none; height: 35px; margin-top: 15px;" }
       %div{ style: "margin:15px 0 5px 27px;" }
