--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -35,8 +35,8 @@
             = image_tag ICON_LOGIN_LINKEDIN, alt: "LinkedIn"
             %span.landingbuttontext Register with LinkedIn »
           = link_to "/auth/github", class: "submit_button", style: "float: right" do
-            = image_tag ICON_LOGIN_GITHUB, alt: "Github"
-            %span.landingbuttontext Register with Github »
+            = image_tag ICON_LOGIN_GITHUB, alt: "GitHub"
+            %span.landingbuttontext Register with GitHub »
           .clear_floats
           %div{style: "background-image: url(#{ICON_DIVIDER_URL}); background-repeat:no-repeat; text-align: center; background-position: center 10px; width:550px; margin:10px auto 20px; "} OR
           = form_for(@user) do |f|
