--- a/app/views/modals/_register.html.haml
+++ b/app/views/modals/_register.html.haml
@@ -9,7 +9,7 @@
           %span Welcome to MetaBright
       %hr
       .explorebody
-        %p{ style: "margin-bottom: 0;" } Before signing up, please select which option best describes you:
+        %p{ style: "margin-bottom: 0;" } To sign up, please select which option best describes you:
         %div
           = link_to "I want to prove my skills and make myself more marketable.", new_user_path, class: "submit_button", style: "margin: 10px 20px", description: "link-to-registration"
           = link_to "I help hire people -- I want my job candidates evaluated.", pricing_path, class: "submit_button landing_yellow", style: "margin: 10px 20px", description: "link-to-pricing"
