--- a/app/views/pages/profile.html.haml
+++ b/app/views/pages/profile.html.haml
@@ -42,7 +42,8 @@
             = f.text_field :name, value: nil, placeholder: "Name"
             = f.text_field :email, style: "margin-left: 10px; margin-right: 10px;", value: nil, placeholder: "E-Mail"
             = f.password_field :password, value: nil, placeholder: "Password", style: "margin-right: 10px;"
-            = f.submit "Submit", class: "button button-standard button-small", style: "margin-bottom: 10px; width: inherit; padding: 4px 10px; font-size: 14px;"
+            = f.submit "Submit", class: "submit_button_alt"
+            
   #topsection
     #updatespace
       = image_tag @user.picture, class: "bigheaderimage", itemprop: "photo", alt: "#{@user.name}", onerror: "user_img_error(this);"
